--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <ul>
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about"><i class="bx bx-user"></i> <span>Tentang Saya</span></a></li>
-        <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+        <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Pendidikan & Pekerjaan</span></a></li>
         <li><a href="#skills"><i class="bx bx-server"></i> <span>Kemampuan</span></a></li>
         <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Kontak</span></a></li>
@@ -206,9 +206,9 @@
 
         
             <div class="progress">
-              <span class="skill">Java <i class="val">65%</i></span>
+              <span class="skill">Java <i class="val">30%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="305" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -267,7 +267,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Inggris <i class="val">65%</i></span>
+              <span class="skill">Inggris <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -275,9 +275,9 @@
 
         
             <div class="progress">
-              <span class="skill">Jepang <i class="val">50%</i></span>
+              <span class="skill">Jepang <i class="val">37%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="37" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
