--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Parakansalak, Sukabumi Regency, West Java, ID</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Parakansalak, Sukabumi Regency, West Java, ID</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Marital Status:</strong> <span>Single</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rafsandi@trimatrastudio.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
